fixed color contrast issues in the table

--- a/main.css
+++ b/main.css
@@ -247,11 +247,11 @@ table .tg-yw4l{
 
 }
 table .tg-5ex6{
-  color:#009901;
+  color:green;
   vertical-align:top;
 }
 
 table .tg-mejs{
-  color:#fe0000;
+  color:red;
   vertical-align:top;
 }
